--- a/HTML/day-2.html
+++ b/HTML/day-2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Day 1</title>
+        <title>Day 2</title>
     </head>
     <body>
         <h2>1. write a code to create an ordered list with roman numbers?</h2>
@@ -49,7 +49,7 @@
             <input type="text" value="" id="name"  placeholder="name" required>
             
             <label>Age :</label>
-            <input type="age" value="" id="Age" placeholder="Age" required>
+            <input type="number" value="" id="Age" placeholder="Age" required>
             
             <label>Email :</label>
             <input type="email" value="" id="email" placeholder="email" required>
